--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       content="This is the personal website of Boye"
     />
    
-    <title>Boye Portfolio</title>
+    <title>Boye's Portfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
